@@ -7,6 +7,7 @@ Core - General
  - Fixes a relative path vulnerability in module_file_tpl resource.
  - Fixes a path building issue in CmsModuleInfo
  - Fixes to parsing and generating moduleinfo.ini files.
+ - Disallow any resource specifications with a * or a / 
 
 AdminSearch v1.0.3
  - Now search the metadata field of content pages.
